[gd_scene load_steps=4 format=3 uid="uid://c5f5v1wtottyp"]

[ext_resource type="Script" path="res://scenes/objects/bottle.gd" id="1_87ktq"]
[ext_resource type="Texture2D" uid="uid://bavsg3hu7pccy" path="res://sprites/room/bottle.svg" id="1_uea7l"]

[sub_resource type="CapsuleShape2D" id="CapsuleShape2D_p8qcj"]
radius = 22.4893
height = 44.9786

[node name="BottleSprite" type="Sprite2D"]
scale = Vector2(0.25, 0.25)
texture = ExtResource("1_uea7l")
script = ExtResource("1_87ktq")

[node name="GrowthTimer" type="Timer" parent="."]
wait_time = 0.1
autostart = true

[node name="Bottle" type="Area2D" parent="."]
collision_layer = 4096

[node name="CollisionShape2D" type="CollisionShape2D" parent="Bottle"]
rotation = 0.487459
scale = Vector2(1, 2.66666)
shape = SubResource("CapsuleShape2D_p8qcj")

[connection signal="timeout" from="GrowthTimer" to="." method="_on_growth_timer_timeout"]
[connection signal="area_entered" from="Bottle" to="." method="_on_bottle_area_entered"]
[connection signal="area_exited" from="Bottle" to="." method="_on_bottle_area_exited"]
